[package]
name = "hex_color"
version = "1.0.0" # update html_root_url in src/lib.rs
authors = ["Sean C. Roach <me@seancroach.dev>"]
edition = "2018"
description = "A Rust library for parsing, serializing, and operating on hex colors."
readme = "README.md"
repository = "https://github.com/seancroach/hex_color"
license = "MIT OR Apache-2.0"
keywords = ["color", "hex"]
categories = ["data-structures"]
include = [
    "src/**/*",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md"
]

[[test]]
name = "serde"
path = "tests/serde.rs"
required-features = ["serde"]

[dependencies]
lazy_static = "1.4"
regex = "1.5"

serde = { version = "1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
version-sync = "0.9"
test-case = "2.0"
